--- a/_sass/0-settings/_variables.scss
+++ b/_sass/0-settings/_variables.scss
@@ -12,7 +12,9 @@ $global-transition: all .2s;
 // *****************
 // Color Variables
 // *****************
-$brand-color: #ff7b7b;
+// $brand-color: #ff7b7b;
+//$brand-color: #6DECAF;
+$brand-color: #D3FFF3;
 $dark: #09080f;
 $blue-dark: #17151E;
 $gray: #aaa;
