--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,3 @@
-/*  ================================================
-	Author: Codeberry
-	Name: Comet
-	URL: https://codeberry.net/downloads/comet
-	Version: 1.0
-	================================================ */
-
 /* Import fonts */
 @import url("https://fonts.googleapis.com/css?family=Roboto+Mono:400,500");
 
@@ -43,8 +36,8 @@ a {
 }
 
 a:hover, a:focus {
-	color: #fccd03;
-	border-bottom: 1px solid #fccd03;
+	color: #FFA20C;
+	border-bottom: 1px solid #FFA20C;
 }
 
 ::-moz-focus-inner {
