--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
 	color: #23231d;
 	/* color: #ebebea; */
 	/* background: #222222; */
-	background: rgb(117, 111, 90);
+	background: #73786b;
 	margin: 0;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
