--- a/css/style.css
+++ b/css/style.css
@@ -39,8 +39,8 @@ a {
 
 a:hover, a:focus {
 	/* color: #FFA20C; */
-	color: #73786b;
-	border-bottom: 1px solid #73786b;
+	color: #FF8200;
+	border-bottom: 1px solid #FF8200;
 }
 
 ::-moz-focus-inner {
