--- a/css/style.css
+++ b/css/style.css
@@ -9,10 +9,10 @@ html {
 
 body {
 	font: 15px/1.5 "Roboto Mono", Helvetica, sans-serif;
-	color: #23231d;
+	color: #0e0d0c;
 	/* color: #ebebea; */
 	/* background: #222222; */
-	background-color: rgb(117, 111, 90);
+	background-color: #73786b;
 	margin: 0;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
