--- a/css/style.css
+++ b/css/style.css
@@ -185,6 +185,7 @@ a:hover, a:focus {
 	width: 100vw;
 	height: 100vh;
 	pointer-events: none;
+	background-color: #73786b;
 }
 
 .scrunch:after {
@@ -196,6 +197,7 @@ a:hover, a:focus {
 	display: block;
 	width: 100%;
 	height: 100%;
+	background-color: #73786b;
 }
 
 .footer {
@@ -227,6 +229,7 @@ a:hover, a:focus {
 		padding: 0 7.5vw 7.5vw;
 		-webkit-box-align: start;
 		align-items: flex-start;
+		background-color: #73786b;
 	}
 }
 
