added typing intro

--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,31 @@ a:hover, a:focus {
 	}
 }
 
-.section {
+.output {
+	animation: fade 5s;
+}
+
+.typer {
+	animation: typing 2s steps(25), blink .5s step-end infinite alternate;
+	overflow: hidden;
+}
+
+@keyframes fade {
+	0% { opacity: 0; }
+	50% { opacity: 0; }
+	100% { opacity: 1; }
+}
+
+@keyframes typing {
+	0% { width: 0; }
+	100% { width: 20ch; }
+}
+
+@keyframes blink {
+	50% { border-color: transparent; }
+}
+
+/* .section {
 	z-index: 1;
 	position: relative;
 	padding: 96px 0 96px 96px;
@@ -94,7 +118,8 @@ a:hover, a:focus {
 	box-sizing: border-box;
 	min-height: 100vh;
 	background-color: #73786b;
-}
+} */
+
 
 @media (max-width: 1024px) {
 	.section {
