fixing: typer intro

--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,8 @@ a:hover, a:focus {
 .typer {
 	animation: typing 2s steps(25), blink .5s step-end infinite alternate;
 	overflow: hidden;
+	width: 20ch;
+	border-right: 10px solid red;
 }
 
 @keyframes fade {
