fix: update rsvp date

--- a/celebrate/assets/css/style.css
+++ b/celebrate/assets/css/style.css
@@ -968,6 +968,11 @@ body {
     background: var(--green);
     color: var(--cream)
   }
+
+
+  .important-date {
+    color: #982649;
+  }
   
   @keyframes animate-loading {
     0% {
