color change; index style change;

--- a/styles.css
+++ b/styles.css
@@ -7,13 +7,23 @@
     --hover: hsla(182, 84%, 32%, 0.1);
 } */
 
-:root {
+/* :root {
     --light: #5A554C;
     --dark: #D2CEC4;
     --medium: rgba(194, 196, 113, 0.8);
     --border: rgba(175, 176, 136, 0.2);
     --yellow: #F4F445;
     --hover: hsla(61, 84%, 32%, 0.354);
+} */
+
+:root {
+    --light: #FAEAD6;
+    --dark: #202020;
+    --medium: rgba(194, 196, 113, 0.8);
+    --border: rgba(175, 176, 136, 0.2);
+    --blue: #1AB5CD;
+    --yellow: #ED1C24;
+    --hover: hsla(0, 84%, 32%, 0.354);
 }
 
 ::selection {
@@ -32,29 +42,46 @@ html {
 }
 
 body {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    /* border: 1px solid blue; */
+    align-items: center;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     background-color: var(--dark);
     margin: 0 auto;
     font-size: calc(1.5rem + 0.25vw);
-    max-width: 56em;
+    max-width: 100em;
+    /* max-width: 56em; */
     color: var(--light);
     box-sizing: inherit;
     line-height: 1.5;
-    padding: 4vh 6vw;
+    padding: 4vh 8vw;
     overflow-x: hidden;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+/* main {
+    border: 1px solid red;
+} */
+
 nav {
+    /* border: 1px solid yellow; */
     display: block;
     box-sizing: inherit;
     margin: 0 0 3em;
+    width: 100%;
+    max-width: 56em;
 }
 
 footer {
+    /* border: 1px solid white; */
     margin: 2em 0;
     padding-top: 2em;
+    max-width: 56em;
+    width: 100%;
+
 }
 
 .header {
@@ -76,7 +103,7 @@ footer {
 }
 
 .external-link {
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke-width='2.5' stroke='%237A8F6F' opacity='0.6' class='w-6 h-6'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='M4.5 19.5l15-15m0 0H8.25m11.25 0v11.25' /%3E%3C/svg%3E%0A");
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke-width='2.5' stroke='%23ED1C24' opacity='0.6' class='w-6 h-6'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='M4.5 19.5l15-15m0 0H8.25m11.25 0v11.25' /%3E%3C/svg%3E%0A");
     background-position: right 33%;
     background-repeat: no-repeat;
     background-size: 0.7em;
@@ -165,12 +192,15 @@ td {
 }
 
 .footer-container {
+    /* border: 1px solid green; */
     display: flex;
     align-items: center;
     color: var(--yellow);
+    max-width: 56em;
 }
 
 footer a{
+    color: var(--light) !important;
     margin-right: .5em;
 }
 
@@ -180,7 +210,7 @@ footer img {
 
 footer p {
     font-size: 0.6em;
-    color: var(--yellow)
+    color: var(--light)
 }
 
 
@@ -199,6 +229,10 @@ pre {
     padding: 1em 1.5em;
     display: block;
     word-wrap: break-word;
+}
+
+article {
+    max-width: 56em;
 }
 
 article img {
@@ -226,8 +260,9 @@ article img {
 }
 
 .highlight {
-    background-color: var(--yellow);
-    color: var(--light);
+    background-color: var(--blue);
+    color: var(--dark)  !important;
+    padding: 0px 2px 0px 2px;
 }
 
 .copy-button {
@@ -240,9 +275,10 @@ article img {
     font-size: 20px;
 }
 
+
 button svg {
 	background: transparent;
-	color: var(--yellow);
+	color: var(--blue) !important;
 	transition: 2s;
 }
 
@@ -251,6 +287,46 @@ button svg {
   /* 	filter: drop-shadow(0 0 12px green); */
   }
   
-  .success svg {
-      color: var(--yellow);
+  /* .success svg {
+      color: var(--blue);
+  } */
+
+a.main-link {
+    text-decoration: none;
   }
+
+a.main-link:hover {
+    text-decoration: none;
+   	color: #FAEAD6 !important;
+	background-color: #202020;
+	border-radius: 10px;
+}
+
+.main-link-span:hover {
+	color: #FAEAD6 !important;
+	background-color: #202020;
+	border-radius: 10px;
+}
+
+.main-link-span {
+	font-size: 58px;
+	font-weight: 800;
+	padding: 0px 10px 0px 10px;
+	transition: all .6s ease;
+	border-radius: 10px;
+}
+
+sup {
+	margin-right: 5px;
+	font-size: 32px;
+}
+
+
+@media screen and (max-width: 767px) {
+    article {
+        max-width: 30em;
+    }
+    .main-link-span {
+        font-size: 42px;
+    }
+}
