--- a/styles.css
+++ b/styles.css
@@ -321,6 +321,12 @@ sup {
 	font-size: 32px;
 }
 
+@media screen and (max-width: 1100px) {
+    article {
+        max-width: 42em;
+    }
+}
+
 
 @media screen and (max-width: 767px) {
     article {
@@ -328,5 +334,23 @@ sup {
     }
     .main-link-span {
         font-size: 42px;
+    }
+    sup {
+        margin-right: 5px;
+        font-size: 28px;
+    }
+}
+
+@media screen and (max-width: 450px) {
+    article {
+        max-width: 24em;
+    }
+    .main-link-span {
+        font-size: 32px;
+        padding: 0px 2px 0px 2px;
+    }
+    sup {
+        margin-right: 5px;
+        font-size: 16px;
     }
 }
